--- a/src/AspNetCore.MultiSpaYarp/AspNetCore.MultiSpaYarp.csproj
+++ b/src/AspNetCore.MultiSpaYarp/AspNetCore.MultiSpaYarp.csproj
@@ -15,6 +15,8 @@
 		<Version>2.1.0</Version>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<PackageReadmeFile>Readme.md</PackageReadmeFile>
+		<PackageId>AspNetCore.MultiSpaYarp</PackageId>
+		<RootNamespace>AspNetCore.SpaYarp</RootNamespace>
 	</PropertyGroup>
 
 	<ItemGroup>
